--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass:build": "sass ./src/scss:css"
+    "sass:build": "sass ./src/scss:./assets/css"
   },
   "style": "pages/assets/css/spyre.css",
   "sass": "scss/spyre.scss",
